# speech_recognition

./: .gitignore  README.md
clf_audio_util/: CMakeLists.txt  package.xml  setup.py
clf_audio_util/src/clf_audio_util/: utils.py
clf_speech_msgs/: CMakeLists.txt  package.xml
clf_speech_msgs/action/: SpeechRecognition.action  TTS.action
clf_speech_msgs/msg/: ASR.msg  Entity.msg  NLU.msg
clf_speech_msgs/srv/: SetFloat32.srv  Translate.srv  Understand.srv
clf_speech_rqt/: CMakeLists.txt  package.xml  plugin.xml  setup.py
clf_speech_rqt/resource/: clf_speech.ui
clf_speech_rqt/scripts/: rqt_clf_speech
clf_speech_rqt/src/clf_speech_rqt/: FontZoomWidget.py  NLUTableModel.py  TableModel.py  clf_speech.py  models.py  widgets.py
pyaudio_capture/: CMakeLists.txt  package.xml  setup.py
pyaudio_capture/scripts/: recorder_node
respeaker_ros/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
respeaker_ros/cfg/: Respeaker3800.cfg  RespeakerArray2.cfg
respeaker_ros/config/: 60-respeaker.rules
respeaker_ros/launch/: audio_playback.launch  debug.launch  full.launch  respeaker.launch  respeaker3800.launch
respeaker_ros/scripts/: read_values.py  respeaker_3800_gencfg.py  respeaker_array2_gencfg.py  respeaker_node  respeaker_node3800  respeaker_node_3800  respeaker_node_array2
respeaker_ros/src/respeaker_ros/: respeaker2.py  respeaker3800.py  respeaker_3800.py
ros_nllb/: CMakeLists.txt  package.xml  setup.py
ros_nllb/launch/: ctranslate.launch  translate.launch
ros_nllb/scripts/: ct2_node  translating_node
ros_parakeetcpp/: CMakeLists.txt  package.xml
ros_parakeetcpp/cmake/: FindParakeet.cmake
ros_parakeetcpp/include/ros_parakeetcpp/: parakeet.hpp
ros_parakeetcpp/launch/: parakeet.launch
ros_parakeetcpp/src/: node.cpp  parakeet.cpp
ros_piper_tts/: CMakeLists.txt  package.xml  setup.py
ros_piper_tts/config/: default.yaml  minimal.yaml  models.yaml
ros_piper_tts/launch/: forward_piper_pal.launch  publish_piper_ue.launch  ros_piper_tts.launch
ros_piper_tts/scripts/: piper_node  piper_node_palforward  piper_node_pub
ros_piper_tts/src/ros_piper_tts/: piper_tts.py
ros_rasa/: CMakeLists.txt  package.xml  setup.py
ros_rasa/config/: default.yml  test.yaml
ros_rasa/config/data/: nlu.yml
ros_rasa/launch/: rasa_nlu.launch  rasa_nlu_asr.launch
ros_rasa/scripts/: rasa_nlu_node  rasa_nlu_node_asr  test_nlu.py  test_nlu_model.py  train_model.py
ros_rasa/src/ros_rasa/: rasa_nlu.py  test.py
ros_silero_vad/: CMakeLists.txt  README.md  package.xml  setup.py
ros_silero_vad/launch/: audio_recordpy.launch  test_audio.launch  vad.launch
ros_silero_vad/scripts/: silero_vad_node
ros_silero_vad/src/ros_silero_vad/: silero.py
ros_whisper/: CMakeLists.txt  README.md  package.xml  setup.py
ros_whisper/launch/: fast-whisper_transcribe.launch  fast-whisper_transcribe_asr.launch  speech_recognition.launch  testing.launch  whisper_asr.launch  whisper_live.launch  whisper_transcribe.launch
ros_whisper/scripts/: fast-whisper_transcribe_node  fast-whisper_transcribe_node_asr  live_whisper_node  speech_recognition_node  testing_node  whisper_transcribe_node
ros_whisper/src/ros_whisper/: hypothesis_buffer.py  live_whisper.py  simple_recorder.py
silero_vad/: CMakeLists.txt  README.md  package.xml  setup.py
silero_vad/launch/: audio_playback.launch  audio_record.launch  test_audio.launch  vad.launch
silero_vad/scripts/: silero_vad_node
silero_vad/src/silero_vad/: cached_silero.py
