<?xml version="1.0"?>
<package format="2">
  <name>pyaudio_capture</name>
  <version>0.0.0</version>
  <description>Clf object recognition nodes</description>

  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>audio_common_msgs</depend>

</package>
