<?xml version="1.0"?>
<package format="2">>
  <name>ros_rasa</name>
  <version>0.0.0</version>
  <description>SNLU with rasa</description>

  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Rügemer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

</package>
